--- a/src/Pages/LandingPage/Components/Body/Body.css
+++ b/src/Pages/LandingPage/Components/Body/Body.css
@@ -6,6 +6,38 @@
   min-height: 100vh;
 }
 
+.News {
+  width: 70%;
+  height: 30%;
+}
+
+.news-container {
+  position: relative;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tagcloud {
+  display: inline-block;
+  top: 0;
+  left: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.0625em;
+  font-size: 1.3em;
+}
+.tagcloud--item {
+  color: #333;
+  text-transform: uppercase;
+}
+
+.tagcloud--item:hover {
+  color: #5d5656;
+}
+
 .feedback {
   width: 70%;
   height: 30%;
