--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -40,14 +40,14 @@
   padding: 1rem 1rem;
   box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
   transition: 0.4s;
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: black;
   border: 1px solid black;
   text-decoration: none;
 }
 
 .getStarted:hover {
-  color: white;
+  color: #f5f5f5;
   background-color: black;
 }
 
@@ -124,7 +124,7 @@
 }
 
 .feedback-button {
-  background-color: #fff;
+  background-color: #f5f5f5;
   border: 1px solid #333;
   color: #333;
   display: block;
@@ -139,7 +139,7 @@
 .feedback-button:hover {
   background-color: #333;
   border: 1px solid #333;
-  color: #fff;
+  color: #f5f5f5;
   display: block;
   border-radius: 6px;
   text-align: center;
@@ -151,7 +151,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: white;
+  background: #f5f5f5;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 0 10px #333;
@@ -173,7 +173,7 @@
 .popup button {
   border: none;
   background: #333;
-  color: white;
+  color: #f5f5f5;
   padding: 10px 20px;
   font-size: 18px;
   border-radius: 5px;
