--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -5,7 +5,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #f5f5f5;
 }
 
 .liens {
@@ -19,7 +18,7 @@
   font-style: none;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-  font-family: monospace;
+  font-family: Arial, Helvetica, sans-serif;
   color: #363e44;
   transition: color 0.2s ease-in-out;
 }
@@ -29,23 +28,34 @@
 
 .log {
   cursor: pointer;
-  border: 0;
-  border-radius: 3rem;
-  font-size: 1rem;
-  font-weight: 600;
-  margin: 0rem 1rem;
-  padding: 1rem 1rem;
+  margin: 0 0 0 50px;
+  padding: 5px 0 5px 0;
   box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
   transition: 0.4s;
-  font-family: "Roboto", sans-serif;
-  color: black;
-  border: 1px solid black;
+  font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
+  text-size-adjust: 5%;
+
+  background-color: #f5f5f5;
+  border: 1px solid #333;
+  color: #333;
+  display: block;
+  border-radius: 6px;
+  text-align: center;
+  /* margin: 50px;
+  padding: 10px; */
+  width: 2in;
+  font-size: 20px;
 }
 
 .log:hover {
-  color: white;
-  background-color: black;
+  background-color: #333;
+  border: 1px solid #333;
+  color: #f5f5f5;
+  display: block;
+  border-radius: 6px;
+  text-align: center;
+  cursor: pointer;
 }
 
 .logoReact {
