--- a/src/Components/Pages/Auth/Auth.css
+++ b/src/Components/Pages/Auth/Auth.css
@@ -10,7 +10,7 @@
 .auth-container {
   width: 70%;
   height: 60%;
-  background-color: #fff;
+  background-color: #f5f5f5;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: grid;
@@ -86,7 +86,7 @@
 }
 
 .auth-container form button {
-  background-color: #fff;
+  background-color: #f5f5f5;
   border: 1px solid #333;
   color: #333;
   display: block;
@@ -99,7 +99,7 @@
 .auth-container form button:hover {
   background-color: #333;
   border: 1px solid #333;
-  color: #fff;
+  color: #f5f5f5;
   display: block;
   border-radius: 6px;
   text-align: center;
@@ -120,7 +120,7 @@
 
 .signin-msg p,
 .signup-msg p {
-  color: #fff;
+  color: #f5f5f5;
   font-size: 20px;
   font-weight: bold;
   margin: 0px 0px 20px 0px;
@@ -128,7 +128,7 @@
 
 .signin-msg button,
 .signup-msg button {
-  background-color: #fff;
+  background-color: #f5f5f5;
   border: 1px solid #333;
   color: #333;
   display: block;
@@ -142,7 +142,7 @@
 .signup-msg button:hover {
   background-color: #333;
   border: 1px solid #333;
-  color: #fff;
+  color: #f5f5f5;
   display: block;
   border-radius: 6px;
   text-align: center;
