--- a/src/Components/Pages/Auth/Auth.css
+++ b/src/Components/Pages/Auth/Auth.css
@@ -168,3 +168,103 @@
   width: 30px;
   height: 30px;
 }
+
+.forgot-password {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.forgot-password h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.forgot-password form {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.forgot-password form input,
+.forgot-password form button {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.forgot-password form button,
+.forgot-password button {
+  background-color: #f5f5f5;
+  border: 1px solid #333;
+  color: #333;
+  display: block;
+  border-radius: 6px;
+  text-align: center;
+  margin: 10px 0;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.forgot-password form button:hover,
+.forgot-password button:hover {
+  background-color: #333;
+  color: #f5f5f5;
+}
+
+/* Styles for the popup */
+.popup {
+  position: fixed;
+  height: 20%;
+  width: 20%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.popup-content {
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.popup-content p {
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #f5f5f5;
+}
+
+.popup-content button {
+  background-color: #f5f5f5;
+  border: 1px solid #333;
+  color: #333;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.popup-content button:hover {
+  background-color: #333;
+  color: #f5f5f5;
+}
+
+.signin button,
+.signup button {
+  margin: 10px 0;
+}
+
+.signin button:last-child {
+  margin-top: 20px;
+}
