--- a/src/Components/Pages/Auth/Auth.css
+++ b/src/Components/Pages/Auth/Auth.css
@@ -85,7 +85,7 @@
   border-radius: 5px;
 }
 
-.auth-container form button {
+.auth-container form .button {
   background-color: #f5f5f5;
   border: 1px solid #333;
   color: #333;
@@ -96,7 +96,7 @@
   padding: 10px;
 }
 
-.auth-container form button:hover {
+.auth-container form .button:hover {
   background-color: #333;
   border: 1px solid #333;
   color: #f5f5f5;
@@ -104,6 +104,36 @@
   border-radius: 6px;
   text-align: center;
   cursor: pointer;
+}
+
+.signin button,
+.signup button {
+  margin: 10px 0;
+}
+
+.signin button:last-child {
+  margin-top: 20px;
+}
+
+.reset-password {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.reset-password button {
+  margin: 0;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  background-color: #f5f5f5;
+  color: #333;
+}
+
+.reset-password button:hover {
+  color: #ccc;
 }
 
 .signin-msg,
@@ -258,13 +288,4 @@
 .popup-content button:hover {
   background-color: #333;
   color: #f5f5f5;
-}
-
-.signin button,
-.signup button {
-  margin: 10px 0;
-}
-
-.signin button:last-child {
-  margin-top: 20px;
 }
